<resources>
    <string name="app_name">WECLICK</string>
    <string name="app_name_capital">WECLICK</string>
    <string name="date_time_pattern_time_with_meridiem">a h:mm</string>
    <string name="date_time_expression_yesterday">어제</string>
    <string name="date_time_expression_days_ago">%d일전</string>
    <string name="date_time_expression_weeks_ago">%d주전</string>
    <string name="date_time_pattern_date_with_short_year">yy/M/d</string>
    <string name="date_time_pattern_date_with_day_of_week">yyyy년 M월 dd일 EEEE</string>
    <string name="date_time_pattern_date">yyyy년 M월 dd일</string>
    <string name="error_message_generic">에러가 발생했습니다</string>
    <string name="error_title_generic">에러</string>
    <string name="error_title_invalid_login">로그인이 유효하지 않습니다</string>
    <string name="error_title_chat_id_not_found">유효하지 않은 채팅입니다.</string>
    <string name="error_title_fetch_profile">프로필을 가져오지 못했습니다</string>
    <string name="error_title_fetch_matches">매치정보를 가져오는데 실패했습니다</string>
    <string name="error_title_fetch_chat_messages">채팅 메세지를 가져오는데 실패했습니다</string>
    <string name="error_title_send_chat_message">채팅 메세지를 전송하지 못했습니다</string>
    <string name="error_title_web_socket_disconnected">서버 연결에러</string>
    <string name="error_title_report">신고요청을 실패</string>
    <string name="error_title_unmatch">채팅방을 나가는데 실패했습니다.</string>
    <string name="error_title_fetch_question">밸런스 질문가져오기 실패</string>
    <string name="error_title_save_answers">밸런스 질문답변 저장실패</string>
    <string name="error_title_click">밸런스를 체크하지 못했습니다</string>
    <string name="error_title_save_about">프로필을 저장하지 못했습니다</string>
    <string name="error_title_fetch_photos">사진을 가져오지 못했습니다</string>
    <string name="error_title_crop_image">사진을 편집하지 못했습니다</string>
    <string name="error_title_add_photo">사진을 업로드 하지못했습니다</string>
    <string name="error_title_order_photos">사진을 재정리 하지 못했습니다</string>
    <string name="error_title_delete_photo">사진을 삭제하지 못했습니다</string>
    <string name="error_title_save_email">이메일을 저장하지 못했습니다</string>
    <string name="error_title_save_push_setting">알람설정을 저장하지 못했습니다</string>
    <string name="error_title_fetch_email">이메일을 가져오지 못했습니다</string>
    <string name="error_title_delete_account">계정을 삭제하지 못했습니다</string>
    <string name="error_title_open_chat">채팅을 열지 못했습니다</string>
    <string name="error_title_fetch_push_setting">알람세팅정보를 가져오지 못했습니다</string>
    <string name="error_title_save_name">이름 저장실패</string>
    <string name="error_title_fail_to_next_register_step">다음스텝으로 못가요!</string>
    <string name="error_message_upload_photo">사진을 올려주세요</string>
    <string name="error_title_save_card_filter">필터저장 실패!</string>
    <string name="chat_not_found_exception">chat_not_found_exception</string>
    <string name="birth_date_not_saved_exception">birth_date_not_saved_exception</string>
    <string name="location_not_found_exception">location_not_found_exception</string>
    <string name="card_filter_not_found_exception">card_filter_not_found_exception</string>
    <string name="error_message_bad_request">유효하지 않은 요청입니다</string>
    <string name="invalid_email_exception">유효하지 않은 이메일입니다</string>
    <string name="save_email_success_message">이메일을 저장했습니다</string>
    <string name="save_push_setting_success_message">알림설정을 저장했습니다</string>
    <string name="unknown_host_exception">인터넷이 연결되어있는지 확인해주세요</string>
    <string name="web_socket_disconnected_exception">web_socket_disconnected_exception</string>
    <string name="chat_message_size_limit_exceeded_exception">채팅메세지가 너무 깁니다 줄여주세요</string>
    <string name="chat_message_empty_exception">채팅메세지를 입력해주세요</string>
    <string name="socket_timeout_exception">서버에 연결할수 없습니다</string>
    <string name="no_internet_connectivity_exception">인터넷이 연결되지 않았습니다</string>
    <string name="connect_exception">서버에 연결할수 없습니다.</string>
    <string name="recent_chat_message_new_match">상대방에게 메세지를 보내보세요</string>
    <string name="recent_chat_message_invalid_match">상대방이 채팅방을 나갔습니다</string>
    <string name="fetch_swipes_exception_title">클릭정보를 가져오는데 실패했습니다</string>
    <string name="save_about_success_message">프로필을 저장했습니다</string>
    <string name="photo_over_size_exception">최대 허용 사진용량을 초과했습니다. 다른사진으로 시도해주세요</string>
    <string name="photo_not_supported_type_exception">해당 이미지는 지원하지 않는 파일타입입니다</string>
    <string name="photo_not_orderable_exception">에러나 로딩중인 사진이 없을때 다시 시도해주세요</string>
    <string name="photo_not_exist_exception">업로드할 사진이 존재하지 않습니다</string>
    <string name="presigned_url_not_found_exception">사진업로드중 에러가 발생했습니다 다시 시도해주세요</string>
    <string name="mime_type_not_found_exception">해당이미지는 지원되지않는 파일입니다</string>
    <string name="chat_id_not_found_exception">해당 채팅은 유효하지 않습니다</string>
    <string name="chat_message_out_of_size_exception">채팅메세지가 맥스를 초과했습니다</string>
    <string name="fetch_matches_exception">매치정보를 가져오는데 실패했습니다</string>
    <string name="fetch_chat_messages_exception">채팅 메세지를 가져오는데 실패했습니다</string>
    <string name="account_identity_not_found_exception">로그인 정보가 정확하지않습니다. 다시 로그인 해주세요</string>
    <string name="chat_message_not_found_exception">메세지를 찾지 못했습니다. 다시 시도해주세요</string>
    <string name="message_server_connected">서버에 연결되었습니다</string>
    <string name="confirm_dialog_delete_chat_message_title">해당 채팅메세지를 삭제하시겠습니다?</string>
    <string name="confirm_dialog_delete_button_title">메세지 삭제하기</string>
    <string name="match_tool_bar_title">MATCH</string>
    <string name="chat_tool_bar_title">CHAT</string>
    <string name="chat_leave_menu_title">채팅룸 나가기</string>
    <string name="chat_report_menu_title">신고하기</string>
    <string name="match_search_hint">이름을 입력해주세요</string>
    <string name="chat_search_hint">Search</string>
    <string name="search_bar_close_btn_description">서치 닫기</string>
    <string name="back_button_description">back button</string>
    <string name="dialog_error_icon_description">errorIcon</string>
    <string name="retry_btn">다시 시도하기</string>
    <string name="dialog_retry_btn_text">다시 시도하기</string>
    <string name="dialog_close_btn_title">닫기</string>
    <string name="chat_message_resend_button_description">resend chat message</string>
    <string name="chat_message_delete_button_description">delete chat message</string>
    <string name="profile_image_description">profile image</string>
    <string name="chat_message_input_description">message..</string>
    <string name="chat_message_send_button_description">send chat message</string>
    <string name="chat_emoticon_button_description">emoticon input button</string>
    <string name="chat_tool_bar_profile_photo_description">chat tool bar profile photo</string>
    <string name="match_rep_photo_iv_description">profile picture</string>
    <string name="snack_bar_title_new_chat_message">새로운 메세지</string>
    <string name="chat_unmatch_btn_title">채팅방 나가기</string>
    <string name="chat_report_match_btn_title">신고하기</string>
    <string name="report_dialog_head">신고하기</string>
    <string name="report_dialog_subhead">해당 유저는 누가 신고를 했는지 알수없습니다. 안전하고 편한 위클릭 사용을 위해서 신고를 해주세요</string>
    <string name="report_dialog_message_button_title">적절하지 않은 메세지</string>
    <string name="report_dialog_photo_button_title">적절하지않은 사진</string>
    <string name="report_dialog_spam_button_title">스팸이나 부적절한 부탁</string>
    <string name="report_dialog_behaviour_button_title">적절하지않은 행동</string>
    <string name="report_dialog_detail_sub_head">해당 유저가 어떤이유로 신고 받아야하는지 조금더 자세히 알려주세요. 판단하는데 큰 도움이 됩니다.</string>
    <string name="report_dialog_other_button_title">기타 다른이유</string>
    <string name="report_dialog_detail_hint">자세한 경위를 설명해주세요</string>
    <string name="report_dialog_submit_button_title">제출하기</string>
    <string name="new_match_snack_bar_iv_description">match profile photo</string>
    <string name="new_match_snack_bar_my_iv_description">my profile photo</string>
    <string name="new_match_snack_bar_title">새로운 매치</string>
    <string name="swipe_header_title">내 취향에 클릭한 사람들 \n 상대방 취향에 클릭하고 새로운 만남을 만들어보세요</string>
    <string name="swipe_tool_bar_title">SWIPE</string>
    <string name="new_swipe_snack_bar_profile_picture">new swipe profile picture</string>
    <string name="new_swipe_snack_bar_title">새로운 클릭</string>
    <string name="new_swipe_snack_bar_body">새로운 만남을 만들어보세요</string>
    <string name="card_tool_bar_title">CARD</string>
    <string name="fetch_card_exception_title">카드를 가져오는데 실패했습니다</string>
    <string name="gender_male_label">남자</string>
    <string name="gender_female_label">여자</string>
    <string name="card_filter_dialog_title">필터</string>
    <string name="card_filter_age_slider_title">상대방의 나이는</string>
    <string name="card_filter_age_slider_between">에서</string>
    <string name="card_filter_distance_slider_title">상대방과의 거리는 최대</string>
    <string name="card_filter_distance_slider_unit">km</string>
    <string name="apply_button_text">적용하기</string>
    <string name="card_filter_gender_title">상대방의 성별은</string>
    <string name="card_stac_empty_text">현재 주변에 이성이없습니다. 필터를 재조정해보세요</string>
    <string name="swipe_profile_photo_image_view_description">swipe profile photo</string>
    <string name="height_icon_description">height icon</string>
    <string name="location_icon_description">location icon</string>
    <string name="gender_icon_description">gender icon</string>
    <string name="card_stack_item_about_title">자기소개</string>
    <string name="report_button_text">신고하기</string>
    <string name="balance_game_dialog_title">BALANCE</string>
    <string name="balance_game_retry_icon_description">balance game retry icon</string>
    <string name="balance_game_missed_text">우린 서로 다른 취향을 가지고 있나봐요!</string>
    <string name="balance_game_keep_swiping_btn_text">스와이프 하기</string>
    <string name="fetch_question_message">밸런스 질문을 가져오고있습니다</string>
    <string name="msg_check_answers">상대방 밸런스와 내 취향을 체크하는중이에요..</string>
    <string name="balance_game_saving_answers_text">밸런스 답변을 저장하고있습니다..</string>
    <string name="balance_game_profile_photo_description">balance game swiped profile photo</string>
    <string name="account_tool_bar_title">ACCOUNT</string>
    <string name="account_profile_photo_description">account profile photo</string>
    <string name="profile_edit_icon_description">profile edit icon</string>
    <string name="edit_profile_text">프로필 편집하기</string>
    <string name="upload_text">업로드</string>
    <string name="download_text">다운로드</string>
    <string name="photo_picker_option_upload_from_gallery_text">사진첩에서 선택하기</string>
    <string name="photo_picker_option_upload_from_capture">사진찍어서 올리기</string>
    <string name="delete_text">삭제하기</string>
    <string name="reupload_text">다시 업로드하기</string>
    <string name="register_name_label">이름을 입력해주세요</string>
    <string name="register_name_description">한번 입력한 이름을 바꾸실수 없습니다. 정확히 입력해주세요</string>
    <string name="button_next_label">다음</string>
    <string name="register_name_hint"></string>
    <string name="title_match_filter_menu_match">match</string>
    <string name="title_match_filter_menu_chat">chat</string>
    <string name="title_match_filter_menu_chat_with_messages">chat with messages</string>
    <string name="title_match_filter_menu_all">all</string>
    <string name="register_gender_label">성별을 선택해주세요</string>
    <string name="register_gender_description">한번 선택한 성별은 다시 바꿀수 없습니다. 정확하게 선택해주세요</string>
    <string name="register_birth_date_label">생년월일을 입력해주세요</string>
    <string name="register_birth_date_description">입력된 생년월일은 계정생성후에 변경이 불가능 합니다. 정확하게 입력해주세</string>
    <string name="register_height_label">키를 입력해주세요</string>
    <string name="register_height_description">키는 계정생성후에도 변경하실 수 있습니다.</string>
    <string name="register_about_description">자기소개는 계정생성이후에도 변경이 가능합니다. 상대방에게 어필할 수 있는 자기소개를 만들어보세요</string>
    <string name="register_about_label">자기소개를 입력해주세요</string>
    <string name="register_about_hint">자기소개를 입력해주세요</string>
    <string name="register_photo_description">자신을 어필할 수 있는 사진을 선택해주세요. 최대 6장 까지 가능하고 드래그 앤 드랍으로 위치를 바꿔보세요.</string>
    <string name="register_photo_title">사진을 선택해주세요</string>
</resources>