<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnPhotoErrorUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_text"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPhotoErrorDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_text"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnUploadPhotoFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_picker_option_upload_from_gallery_text"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnUploadPhotoFromCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_picker_option_upload_from_capture"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnPhotoErrorDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:visibility="gone" />

</LinearLayout>