<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sh_round_box"
    android:backgroundTint="@color/LightGrey"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center"
    android:baselineAligned="false">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivNewMatchSnackBarSwiper"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/person1"
            android:contentDescription="@string/new_match_snack_bar_my_iv_description" />

        <ImageView
            android:id="@+id/ivNewMatchSnackBarSwiped"
            android:layout_marginStart="37dp"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/person2"
            android:contentDescription="@string/new_match_snack_bar_iv_description" />

    </FrameLayout>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="3dp"
            android:textColor="@color/TextGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_match_snack_bar_title"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_chat_message_new_match"/>

    </LinearLayout>
    

</LinearLayout>